# ra4m1-flash-algorithm

./: .gitattributes  Cargo.toml  README.md  gen-yaml.sh  template.yaml
.cargo/: config.toml
src/: delay.rs  main.rs  reg.rs
