[package]
authors = ["Ein Terakawa <applause@elfmimi.jp>"]
edition = "2021"
readme = "README.md"
name = "ra4m1-flash-algorithm"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.0", features = ["inline-asm"] }
flash-algorithm = { version = "0.4.0" }
rtt-target = { version = "0.3", features = ["cortex-m"], optional = true }

[features]
enable_hoco_after = []
rtt = [ "rtt-target" ]

# this lets you use `cargo fix`!
[[bin]]
name = "ra4m1-flash-algorithm"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
